Fixed bug : Focus is not set on delivery tiles on mobile devices & changed product state wording like product onboarding's

--- a/src/app/content/product-information/general-information/general-information.component.css
+++ b/src/app/content/product-information/general-information/general-information.component.css
@@ -11,3 +11,11 @@
 #predefined-question {
     border: solid 0px;
 }
+
+.state-title {
+  margin-bottom: 0px;
+}
+
+.state-description {
+  margin-top: 15px;
+}
