--- a/src/app/content/product-information/sticky-menu/sticky-menu.component.css
+++ b/src/app/content/product-information/sticky-menu/sticky-menu.component.css
@@ -42,13 +42,8 @@ mat-panel-title .title {
   margin-top: 20px;
 }
 
-#menu-content-desktop {
+#menu-content {
   width: 80%;
-  margin: 0 auto;
-}
-
-#menu-content-mobile {
-  width: 100%;
   margin: 0 auto;
 }
 
@@ -104,4 +99,10 @@ mat-panel-title .title {
 #propositionPrice {
   font-size: 1.8em;
   font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  #menu-content {
+    width: 100%;
+  }
 }
