--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,10 @@
   color: var(--KTKP-RED);
 }
 
+.green {
+  color: var(--KTKP-GREEN);
+}
+
 /* Tags definition */
 
 .small-title {
@@ -149,6 +153,18 @@
   height: 30px;
 }
 
+.small-icon {
+  font-size: 0.5em;
+}
+
+.medium-icon {
+  font-size: 0.75em;
+}
+
+.big-icon {
+  font-size: 1em;
+}
+
 .side-icon {
   margin-right: 10px;
 }
@@ -178,7 +194,7 @@
 }
 
 .removespacebelow {
-  margin-bottom: 5px;
+  margin-bottom: 0px;
 }
 
 .little-title {
